Added support for color change and style change (still needs to be tested -->) per player

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -10,4 +10,4 @@ website: jonaas.dev
 commands:
   togglestats:
     description: Toggles the display of server statistics in form of a BossBar.
-    usage: /togglestats
+    usage: /togglestats [string] [value]
